--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,8 @@ header .navbar ul li a:hover, header .navbar ul li a:focus {
   .img-container {
     margin-left: 0;
     margin-top: 2rem;
-    border-radius:3rem ;
+    height: 20rem;
+  width: 20rem;
   }
 }
 .skills-list {
