--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,7 @@ header .navbar li {
 }
 header .navbar ul li a {
   font-size: 1.57rem;
-  color: #0E2431;
+  color: sky-blue;
   font-weight: 600;
   letter-spacing: 0.04rem;
   position: relative;
