--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
   --white: #ffffff;
   --black: #000;
+  --overlay: rgb(76, 0, 255);
   --primary-pink: #ff0000;
   --secondary-grey: rgb(192, 237, 255);
   --secondary-pink: rgb(76, 0, 255);
@@ -14,6 +15,7 @@
 [data-theme="dark"] {
   --white: #181818;
   --black: #fff;
+  --overlay: #8e44ad;
   --primary-pink: white;
   --secondary-grey: #222;
   --secondary-pink: #8e44ad;
@@ -23,6 +25,7 @@
   --progress-bg: #555;
   --progress-fill: #ff69b4;
   --testimonial-bg: #2e2e2e;
+  --breaf: black;
 }
 *,
 *::before,
@@ -93,25 +96,7 @@ p {
   border-color: var(--secondary-pink);
 }
 
-    .containerA {
-      background: #fff;
-      padding: 20px;
-      width: 100%;
-      max-width: 600px;
-      margin: auto;
-      border-radius: 8px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-
-    .tt {
-      color: #333;
-      font-size: 1.5rem;
-    }
-
-    .brief {
-      font-size: 1rem;
-      color: #444;
-    }
+    
 
     button {
       margin-top: 20px;
@@ -139,6 +124,7 @@ p {
       border-radius: 10px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       z-index: 1000;
+      color: var(--breaf);
       width: 90%;
       max-width: 90vw;
       display: none;
@@ -156,7 +142,7 @@ p {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5);
+      background:  var(--overlay);
       z-index: 999;
       display: none;
     }
@@ -172,18 +158,11 @@ p {
     }
 
     @media (max-width: 480px) {
-      .container, .popup {
+      .popup {
         padding: 15px;
         font-size: 0.95rem;
       }
 
-      .tt {
-        font-size: 1.25rem;
-      }
-
-      .brief {
-        font-size: 0.95rem;
-      }
 
       button {
         font-size: 0.95rem;
