--- a/styles.css
+++ b/styles.css
@@ -45,20 +45,20 @@ html {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
-.lottie-background {
+/*.lottie-background {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: -1; /* stays behind your content */
-  overflow: hidden;
-}
+  z-index: -1; 
+ 1 overflow: hidden;
+} 
 
 lottie-player {
   width: 100%;
   height: 100vh;
-}
+} */
 
 body {
   background: var(--white);
