--- a/styles.css
+++ b/styles.css
@@ -316,7 +316,7 @@ input:focus, textarea:focus {
   color: #fff;
   font-size: 1.2rem;
 }
-#theme-toggle {
+/* #theme-toggle {
   position: fixed;
   top: 1rem;
   right: 0.1rem; 
@@ -325,11 +325,11 @@ input:focus, textarea:focus {
   border-radius: 50%;
   width: 4rem;
   height: 4rem;
- /* z-index: 1001;*/
+ /* z-index: 1001;
   font-size: 2rem;
   cursor: pointer;
   border: none;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2); */
 }
 #back-to-top {
   position: fixed;
